Added html home page template to laravel layout

--- a/resources/sass/frontend_sass/frontend_style.scss
+++ b/resources/sass/frontend_sass/frontend_style.scss
@@ -37,15 +37,15 @@
 
 
 /* :: 2.0 Import All CSS */
-@import '/css/frontend_css/bootstrap.min.css';
-@import '/css/frontend_css/animate.css';
-@import '/css/frontend_css/owl.carousel.css';
-@import '/css/frontend_css/classy-nav.min.css';
-@import '/css/frontend_css/magnific-popup.css';
-@import '/css/frontend_css/font-awesome.min.css';
-@import '/css/frontend_css/themify-icons.css';
-@import '/css/frontend_css/nice-select.css';
-@import '/css/frontend_css/jquery-ui.min.css';
+@import '/css/frontend_css/css/bootstrap.min.css';
+@import '/css/frontend_css/css/animate.css';
+@import '/css/frontend_css/css/owl.carousel.css';
+@import '/css/frontend_css/css/classy-nav.min.css';
+@import '/css/frontend_css/css/magnific-popup.css';
+@import '/css/frontend_css/css/font-awesome.min.css';
+@import '/css/frontend_css/css/themify-icons.css';
+@import '/css/frontend_css/css/nice-select.css';
+@import '/css/frontend_css/css/jquery-ui.min.css';
 
 
 /* :: 3.0 Base CSS */
