--- a/public/css/frontend_css/frontend_style.css
+++ b/public/css/frontend_css/frontend_style.css
@@ -29,15 +29,15 @@
 /* :: 1.0 Import Fonts */
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700");
 /* :: 2.0 Import All CSS */
-@import url(/css/frontend_css/bootstrap.min.css);
-@import url(/css/frontend_css/animate.css);
-@import url(/css/frontend_css/owl.carousel.css);
-@import url(/css/frontend_css/classy-nav.min.css);
-@import url(/css/frontend_css/magnific-popup.css);
-@import url(/css/frontend_css/font-awesome.min.css);
-@import url(/css/frontend_css/themify-icons.css);
-@import url(/css/frontend_css/nice-select.css);
-@import url(/css/frontend_css/jquery-ui.min.css);
+@import url(/css/frontend_css/css/bootstrap.min.css);
+@import url(/css/frontend_css/css/animate.css);
+@import url(/css/frontend_css/css/owl.carousel.css);
+@import url(/css/frontend_css/css/classy-nav.min.css);
+@import url(/css/frontend_css/css/magnific-popup.css);
+@import url(/css/frontend_css/css/font-awesome.min.css);
+@import url(/css/frontend_css/css/themify-icons.css);
+@import url(/css/frontend_css/css/nice-select.css);
+@import url(/css/frontend_css/css/jquery-ui.min.css);
 /* :: 3.0 Base CSS */
 * {
   margin: 0;
